--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,2 +1,8 @@
-site_name: My Docs
-theme: cinder
+site_name: The Past Is Yours, But the Future Is Mine
+theme: 
+  name: cinder
+  custom_dir: custom_theme/
+extra_css:
+- "css/icon.css"
+markdown_extensions:
+  - admonition
